--- a/src/extension/features/toolkit-reports/pages/root/components/report-selector/styles.scss
+++ b/src/extension/features/toolkit-reports/pages/root/components/report-selector/styles.scss
@@ -1,15 +1,18 @@
 .tk-report-selector {
   background-color: var(--tk-ive-report-header-background-color);
   color: #ffffff;
-  height: 3em;
+  min-height: 3em;
+  margin-top: 1em;
 
   &__item {
     cursor: pointer;
-    border-radius: 1000px;
+    // border-radius: 1000px;
     color: #ffffff;
     font-size: 0.9em;
     padding: 0.4em 1em;
-    margin-right: 1em;
+    margin: 0.1em 0;
+    // margin-right: 1em;
+    width: 100%;
 
     &--active {
       background-color: #16a336;
